--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hxscst/solidityLearn#readme",
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.0.3",
-    "ethers": "^5.5.4"
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4"
   }
 }
